3.0.14: 2007-??-??
- Build fix (Shire)
- Don't hook the upload hook if APC is disabled (Rasmus)
- Local shadow cache support (Gopal)
- Avoid uneccessary loops over op_arrays for "known" auto-globals (Gopal)

3.0.13: 2007-02-24
- File upload progress (Rasmus)
- Pthread mutex and spin locks (Shire)
- Recursive zval support for apc_fetch/_store (Shire, Gopal)
- apc.stat_ctime flag for ctime checks (Rasmus)
- Multiple key fetches with apc_fetch (Shire)
- Canary checks for shm memory deallocation (Gopal)
- Add hooks for external optimizer (Shire)
- Obsolete and remove apc optimizer (Gopal)
- APC info changes - cache insert rate, hit and miss rates (Shire)
- Fix apc_load_constants (Gopal)
- Rewrite dump opcode code to use vld (Gopal)
- Use apc_[ewn]print functions for error reporting (Shire) 
- Auto global fixes and refactoring (Gopal, Shire)
- Fix memory leaks in object serialization (Ilia)
- Memory cleanup code for destructor order (Gopal)
- Win32 build fixes (Ilia, Wez)
- ZTS and Php 4 build fixes (Bjori)
- Add apc_add() function (Rasmus)
- Add optional limited flag to apc_sma_info() (Rasmus)

3.0.12p2: 2006-09-05
- Package version up

3.0,12p1: 2006-09-05
- PHP4 build fixes

3.0.12: 2006-09-05
- PHP 5.2 compatibility (Gopal)
- TSRM fixes (Gopal)
- Add extra flags to op_array->reserved to improve op array 
  processing code (Gopal)
- Fix crashes in optimizer and cli mode (Ilia)
- Optimizer fixes for PHP5 (Ilia, Gopal)
- Allow multiple inclusions of a file with a dynamic class (Gopal)
- Php 4 function table and properties fixes (Gopal)
- Fix memory leaks in apc_cache_info (Gopal)

3.0.11: 2006-08-16
- Made --enable-apc-mmap the default compile option (for real this time)
- Add an optional flag to apc_cache_info() and some apc.php tweaks to make it
  only fetch header information to make it useful when you have tens of
  thousands of entries.  (Brian Shire)
- 64-bit fixes (George)
- Don't mix Full Path and Inode keys (George)